<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_light_land"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/logosplas"
        android:paddingTop="0dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        style="@style/TextTheme"
        android:textColor="@color/colortext"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/etmatric"
        style="@style/TextTheme"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:hint="@string/hint_mat"
        android:inputType="numberDecimal"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/etinter"
        style="@style/TextTheme"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hint_int"
        android:inputType="numberDecimal"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ettest"
        style="@style/TextTheme"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hint_test"
        android:inputType="number"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colortext"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">



        <Button
            android:id="@+id/btn_calculate"
            style="@style/TextTheme"
            android:layout_width="100dp"
            android:layout_height="50dp"
          android:layout_gravity="left"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colortext"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/btn_test"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/btn_reset"
            style="@style/TextTheme"
            android:layout_width="100dp"
            android:layout_marginLeft="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colortext"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/btn_reset"
            android:textColor="@color/colorWhite" />
    </LinearLayout>



    <TextView
        android:id="@+id/tvResult"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/Result"
        android:layout_gravity="center"
        style="@style/TextTheme"
        android:textAlignment="center"
        android:textColor="@color/colortext"
        android:textSize="24sp"
        android:textStyle="bold"
       />

    <ImageView
        android:id="@+id/switcher_btn"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/night" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center|bottom">


        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer"
            android:textColor="@color/colortext"
            android:textSize="15sp" />

    </LinearLayout>

 </LinearLayout>



